--- a/.gitignore
+++ b/.gitignore
@@ -304,3 +304,5 @@ fabric.properties
 
 # End of https://www.toptal.com/developers/gitignore/api/pycharm
 /.python-version
+
+Intermediate+/email_config.py
