--- a/.gitignore
+++ b/.gitignore
@@ -305,4 +305,4 @@ fabric.properties
 # End of https://www.toptal.com/developers/gitignore/api/pycharm
 /.python-version
 
-Intermediate+/email_config.py
+Config
